--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "tinymce-plugin-tabulation",
-  "version": "0.2.0",
-  "description": "An Plugin for the tinymce wysiwyg HTML editor that provide tabulation on `tab` keypress",
+  "name": "tinymce-plugin-indet",
+  "version": "0.3.0",
+  "description": "An Plugin for the tinymce wysiwyg HTML editor that provide indentation on `tab` keypress",
   "main": "plugin.js",
   "dependencies": {
     "grunt-contrib-jshint": "^0.11.3"
