--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tinymce-plugin-indet",
+  "name": "tinymce-plugin-indent",
   "version": "0.3.1",
   "description": "An Plugin for the tinymce wysiwyg HTML editor that provide indentation on `tab` keypress",
   "main": "plugin.js",
